welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: not found: value ramasseBiscuit
    while (!estSurBiscuit()) {while (isFacingTrail()) {avance();baisseBrosse();leveBrosse()};gauche()};ramasseBiscuit()
                                                                                                       ^