welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    while (!estSurBiscuit()) {while (isFacingTrail()) {avance();baisseBrosse();leveBrosse()};gauche()};ramasseBiscuit()
}

def isFacingTrail():Boolean = {if (!estFaceMur()){avance(); if (getCouleurSol() == Color.green) {recule();return true} else {recule();return false }} else {return false}
}